# fm2030

./: .gitignore  CMakeLists.txt
asm/: CMakeLists.txt  README.md
asm/assembly/: program1.s  test1.s  test2.s
asm/src/: Assembler.cpp  Scanner.cpp  Scanner.hpp  Writer.cpp  Writer.hpp  comm.hpp  main.cpp
asm/test/: AssemblerTest.hpp
assembly/: program1.s
src/: Assembler.cpp  Assembler.hpp  Parser.cpp  Parser.hpp  Scanner.cpp  Scanner.hpp  Writer.cpp  Writer.hpp  main.cpp
test/: AssemblerTest.hpp  main.cpp
verilog/: ALU.sv  ALU_Branch.sv  ALU_Branch_test.sv  ALU_test.sv  Control_Unit.sv  MEM.sv  MEM_test.sv  Makefile  SV_2x1_Mux.sv  SV_2x1_Mux_Mem.sv  SV_2x1_Mux_test.sv  SV_3x1_Mux.sv  SV_3x1_Mux_test.sv  SV_6x1_Mux.sv  SV_6x1_Mux_test.sv  halter.sv  halter_test.sv  hater.sv  hater_test.sv  instr_mem.sv  inverter.sv  inverter_test.sv  lfsr.sv  lfsr_test.sv  main.sv  message_enc.py  program_counter.sv  program_counter_test.sv  register_file.sv  register_file_test.sv  shifter.sv  shifter_test.sv  sign_extender.sv  sign_extender_test.sv  special_extender.sv  special_extender_test.sv  top.sv
verilog/sample/: data_mem.sv
